[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/animations/Walking_enemy_-IDLE-_(maybe).png" type="Texture" id=1]
[ext_resource path="res://script/objects/enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 5.04538, 8.77114 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[node name="enemy" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( 3, 3 )
z_index = 1
collision_layer = 2
script = ExtResource( 2 )
gravity = 20

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8.77114 )
shape = SubResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.19209e-07, -11 )
scale = Vector2( 1.0625, 1.05762 )
frames = SubResource( 9 )
animation = "walk"
frame = 4
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -8.77114 )
shape = SubResource( 10 )

[node name="edgeCheckerRight" type="RayCast2D" parent="."]
position = Vector2( 5, 0 )
enabled = true
cast_to = Vector2( 0, 4 )
collide_with_areas = true

[node name="edgeCheckerLeft" type="RayCast2D" parent="."]
position = Vector2( -5, 0 )
enabled = true
cast_to = Vector2( 0, 4 )
collide_with_areas = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
